# apple-corefoundation

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
Base.subproj/: CFInternal.h  CFRuntime.c  CoreFoundation.h  CoreFoundation_Prefix.h  ForFoundationOnly.h  ForSwiftFoundationOnly.h
CoreFoundation/: .clang-format  .gitignore  Bridging.md  CFFileDescriptor.c  CFNotificationCenter.c  CFPlatform.c  CFRunLoop.c  CFRuntime.c  CMakeLists.txt  GNUmakefile  README.md  STATUS.md  TODO.md  cmake.sh  fix-headers.sh
CoreFoundation/AppServices.subproj/: CFUserNotification.m
CoreFoundation/Base.subproj/: BridgeHelpers.h  CFBase.h  CFBase.m  CFFileUtilities.m  CFInternal.h  CFKnownLocations.m  CFPlatform.m  CFPriv.h  CFRuntime.c  CFRuntime.h  CFRuntime.m  CFRuntime_Internal.h  CFSortFunctions.m  CFSystemDirectories.m  CFUUID.m  CFUtilities.c  CFUtilities.m  CFVersion.m  CFWindowsUtilities.m  CoreFoundation.h  CoreFoundation_Prefix.h  ForFoundationOnly.h  GNUmakefile  GSCFInternal.h  NSCFType.h  NSCFType.m
CoreFoundation/Collections.subproj/: CFArray.m  CFBag.m  CFBasicHash.h  CFBasicHash.m  CFBinaryHeap.m  CFBitVector.m  CFCollections_Internal.h  CFData.m  CFDictionary.m  CFSet.m  CFStorage.m  CFTree.m  NSCFArray.h  NSCFArray.m  NSCFCollectionSupport.h  NSCFCollectionSupport.m  NSCFDictionary.h  NSCFDictionary.m
CoreFoundation/Documentation/: Bridging.md
CoreFoundation/Error.subproj/: CFError.m
CoreFoundation/Headers/CoreFoundation/: BridgeHelpers.h  CFArray.h  CFAsmMacros.h  CFAttributedString.h  CFAttributedStringPriv.h  CFAvailability.h  CFBag.h  CFBase.h  CFBasicHash.h  CFBigNumber.h  CFBinaryHeap.h  CFBitVector.h  CFBundle.h  CFBundlePriv.h  CFBundle_BinaryTypes.h  CFBundle_Internal.h  CFBundle_SplitFileName.h  CFBurstTrie.h  CFByteOrder.h  CFCalendar.h  CFCalendar_Internal.h  CFCharacterSet.h  CFCharacterSetPriv.h  CFCollections_Internal.h  CFData.h  CFDate.h  CFDateComponents.h  CFDateFormatter.h  CFDateFormatter_Private.h  CFDateInterval.h  CFDateIntervalFormatter.h  CFDictionary.h  CFError.h  CFError_Private.h  CFFileDescriptor.h  CFICUConverters.h  CFICULogging.h  CFInternal.h  CFKnownLocations.h  CFLocale.h  (+72 more)
CoreFoundation/Locale.subproj/: CFCalendar.c  CFCalendar.m  CFCalendar_Enumerate.c  CFCalendar_Enumerate.m  CFCalendar_Internal.h  CFDateComponents.m  CFDateFormatter.c  CFDateFormatter.m  CFDateInterval.m  CFDateIntervalFormatter.m  CFLocale.c  CFLocale.m  CFLocaleIdentifier.c  CFLocaleIdentifier.m  CFLocaleKeys.m  CFNumberFormatter.c  CFNumberFormatter.m  NSCFLocale.h  NSCFLocale.m
CoreFoundation/NumberDate.subproj/: CFBigNumber.h  CFBigNumber.m  CFDate.m  CFNumber.m  CFTimeZone.m  NSCFNumber.h  NSCFNumber.m  _NSCFNumber.h  _NSCFNumber.m
CoreFoundation/Parsing.subproj/: CFBinaryPList.m  CFOldStylePList.m  CFPropertyList.c  CFPropertyList.m  CFXMLInterface.m
CoreFoundation/PlugIn.subproj/: CFBundle.c  CFBundle.m  CFBundle_Binary.c  CFBundle_Binary.m  CFBundle_DebugStrings.m  CFBundle_Executable.c  CFBundle_Grok.m  CFBundle_InfoPlist.c  CFBundle_InfoPlist.m  CFBundle_Internal.h  CFBundle_Locale.m  CFBundle_Main.m  CFBundle_Resources.c  CFBundle_Resources.m  CFBundle_SplitFileName.h  CFBundle_Strings.c  CFBundle_Strings.m  CFBundle_Tables.c  CFPlugIn.c  CFPlugIn.m  CFPlugIn_Factory.h
CoreFoundation/Preferences.subproj/: CFApplicationPreferences.m  CFPreferences.m  CFXMLPreferencesDomain.m
CoreFoundation/RunLoop.subproj/: CFFileDescriptor.c  CFMachPort.m  CFMachPort_Lifetime.m  CFMessagePort.m  CFRunLoop.m  CFSocket.m
CoreFoundation/Stream.subproj/: CFConcreteStreams.m  CFFileDescriptor.h  CFFileDescriptor.m  CFSocketStream.c  CFSocketStream.m  CFStream.c  CFStream.m  CFStreamAbstract.h  CFStreamInternal.h
CoreFoundation/String.subproj/: CFAttributedString.m  CFBurstTrie.m  CFCharacterSet.m  CFRegularExpression.m  CFRunArray.m  CFString.c  CFString.m  CFStringEncodings.m  CFStringScanner.m  CFStringTransform.m  CFStringUtilities.m  NSCFString.h  NSCFString.m
CoreFoundation/StringEncodings.subproj/: CFBuiltinConverters.m  CFICUConverters.m  CFPlatformConverters.m  CFStringEncodingConverter.m  CFStringEncodingConverterPriv.h  CFStringEncodingDatabase.h  CFStringEncodingDatabase.m  CFUniChar.m  CFUnicodeDecomposition.m  CFUnicodePrecomposition.m
CoreFoundation/Tests/CoreBase-Tests/: .gitignore  GNUmakefile  GNUmakefile.super  README.md
CoreFoundation/Tests/CoreBase-Tests/CFRunLoop/: GNUmakefile  source.m  timers.m
CoreFoundation/Tests/CoreBase-Tests/CFString/: objc_bridge.m
CoreFoundation/Tests/CoreBase-Tests/CFURL/: create.m
CoreFoundation/Tests/Examples/: CFFTPSample.m  CFFTPSample_README  CFPrefsDumper.m  DictionaryExample.m  DisplayURL.m  GNUmakefile  LICENSE.md  PrefsExample2.m  PrefsExample3.m  README.md  date_test.m  plconvert.m
CoreFoundation/Tests/Local/Bridging/: GNUmakefile  NSCFArray-Tests.m  NSCFDictionary-Tests.m  NSCFLocale-Tests.m  NSCFString-Tests.m
CoreFoundation/URL.subproj/: CFURL.m  CFURLAccess.m  CFURLComponents.m  CFURLComponents_Internal.h  CFURLComponents_URIParser.m
CoreFoundation/include/: CFAvailability.h  CFFileDescriptor.h  CFString.h
CoreFoundation/internalInclude/: CFInternal.h  CFRuntime_Internal.h  CoreFoundation_Prefix.h
Locale.subproj/: CFDateIntervalFormatter.c
Parsing.subproj/: CFPropertyList_Internal.h
PlugIn.subproj/: CFBundle_Internal.h
RunLoop.subproj/: CFFileDescriptor.c  CFFileDescriptor.h  CFRunLoop.c
Stream.subproj/: CFStream.c
StringEncodings.subproj/: CFUniChar.c
cmake/modules/: FindDispatch.cmake
